my profile page

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta name="description" content="Page with basic information about Jojanneke.">
   <title>Basic info</title>
 
   <!-- Google fonts -->
@@ -19,7 +18,7 @@
   <div class="container">
 
     <div class="card">
-      <img src="../images/Jojanneke.jpg" alt="Jojanneke Tamis" class="img-circle">
+      <img src="images/Jojanneke.jpg" alt="Jojanneke Tamis" class="img-circle">
       <h1>Jojanneke Tamis</h1>
       <h2>Student @ Le Wagon</h2>
       <p>I'm currently student at Le Wagon, learning how to code in Ruby and Ruby on Rails.</p>
@@ -61,7 +60,7 @@
         </thead>
         <tbody>
           <tr>
-            <td><img src="../images/sunshine.jpg" alt="Little miss Sunshine" class="resize-img">
+            <td><img src="images/sunshine.jpg" alt="Little miss Sunshine" class="resize-img">
             </td>
             <td>
               <h3>Little Miss Sunshine (2006)</h3>
@@ -70,7 +69,7 @@
           </tr>
 
           <tr>
-            <td><img src="../images/starwars.jpeg" alt="Star Wars" class="resize-img">
+            <td><img src="images/starwars.jpeg" alt="Star Wars" class="resize-img">
             </td>
             <td><h3>Star Wars (1977)</h3>
               <p>Luke Skywalker joins forces with a Jedi Knight, a cocky pilot, a wookiee and two droids to save the galaxy from the Empire's world-destroying battle-station, while also attempting to rescue Princess Leia from the evil Darth Vader.</p>
@@ -78,7 +77,7 @@
           </tr>
 
           <tr>
-            <td><img src="../images/stranger.jpg" alt="stranger than fiction" class="resize-img">
+            <td><img src="images/stranger.jpg" alt="stranger than fiction" class="resize-img">
             </td>
             <td><h3>Stranger Than Fiction (2006)</h3>
              <p>An IRS auditor suddenly finds himself the subject of narration only he can hear: narration that begins to affect his entire life, from his work, to his love-interest, to his death.</p>
